--- a/doctorblog/templates/account.html
+++ b/doctorblog/templates/account.html
@@ -14,7 +14,7 @@
     <div class="form-group">
       {{ form.username.label(class="form-group") }}
       {{form.username(class='form-control')  }}
-    </div
+    </div>
     <div class="form-group">
       {{ form.email.label(class="form-group") }}
       {{form.email(class='form-control')  }}
