Added QR code feature

--- a/doctorblog/templates/register.html
+++ b/doctorblog/templates/register.html
@@ -4,6 +4,7 @@
     {{form.hidden_tag()}}
     {{form.email.label}}{{form.email}}<br>
     {{form.username.label}}{{form.username}}<br>
+    {{form.license_key.label}}{{form.license_key}}<br>
     {{form.password.label}}{{form.password}}<br>
     {{form.pass_confirm.label}}{{form.pass_confirm}}<br>
     {{form.submit()}}
