--- a/doctorblog/templates/account.html
+++ b/doctorblog/templates/account.html
@@ -4,7 +4,6 @@
 <div class="jumbotron">
   <div align='center'>
     <h1 >Welcome to the page for {{current_user.username}}</h1>
-    <img align='center' src="{{ url_for('static', filename='profile_pics/' + current_user.profile_image) }}">
     <p>{{ current_user.email }}</p>
   </div>
 </div>
@@ -14,14 +13,14 @@
     <div class="form-group">
       {{ form.username.label(class="form-group") }}
       {{form.username(class='form-control')  }}
-    </div
+    </div>
     <div class="form-group">
       {{ form.email.label(class="form-group") }}
       {{form.email(class='form-control')  }}
     </div>
     <div class="form-group">
-      {{ form.picture.label(class="form-group") }}
-      {{ form.picture(class="form-control-file") }}
+      {{ form.license_key.label(class="form-group") }}
+      {{form.license_key(class='form-control')  }}
     </div>
     <div class="form-group">
         {{ form.submit(class="btn btn-primary") }}
