--- a/doctorblog/templates/index.html
+++ b/doctorblog/templates/index.html
@@ -4,7 +4,7 @@
     <h1>doctorBlog</h1>
   </div>
   {% if current_user.is_authenticated %}
-  <h1>Your history of medicines is hear</h1>
+  <h1>Your recent medical post</h1>
   {% for post in posts.items %}
   {% if current_user.username==post.author.username %}
   <div>
@@ -14,8 +14,29 @@
       <h1>Written By the doctor:{{post.author.username}}</h1>
       <p>Published on:{{post.date.strftime('%Y-%m-%d')}}</p>
       <p class="card-text">Medicine prescribed is:{{post.medicine}} </p>
+      <p class="card-text">Description :{{post.description}}</p>
+      <p class="card-text">Allergy :{{post.allergy}}</p>
+      {% if post.morning %}
+      <p class="card-text">Take morning</p>
+      {% else %}
+      <p class="card-text">Don't take morning</p>
+      {% endif %}
+
+      {% if post.afternoon %}
+      <p class="card-text">Take afternoon</p>
+      {% else %}
+      <p class="card-text">Don't take afternoon</p>
+      {% endif %}
+
+      {% if post.evening %}
+      <p class="card-text">Take evening</p>
+      {% else %}
+      <p class="card-text">Don't take evening</p>
+      {% endif %}
+      <img src="{{ qrcode("http://192.168.43.129:5000/get_data/"+post.patient_name)}}" alt="">
     </div>
   </div>
+  
   {% endif %}
   {% endfor %}
 
