--- a/doctorblog/templates/post.html
+++ b/doctorblog/templates/post.html
@@ -13,6 +13,26 @@
             {{form.medicine(class="form-control form-control-lg") }}
         </div>
         <div class="form-group">
+            {{form.description.label(class="form-control-label") }}
+            {{form.description(class="form-control form-control-lg") }}
+        </div>
+        <div class="form-group">
+            {{form.allergy.label(class="form-control-label") }}
+            {{form.allergy(class="form-control form-control-lg") }}
+        </div>
+        <div class="form-group">
+            {{form.morning.label() }}
+            {{form.morning() }}
+        </div>
+        <div class="form-group">
+            {{form.afternoon.label() }}
+            {{form.afternoon() }}
+        </div>
+        <div class="form-group">
+            {{form.evening.label() }}
+            {{form.evening() }}
+        </div>
+        <div class="form-group">
             {{form.submit(class="btn btn-outline-info") }}
         </div>
     </form>
