--- a/doctorblog/templates/post.html
+++ b/doctorblog/templates/post.html
@@ -21,16 +21,8 @@
             {{form.allergy(class="form-control form-control-lg") }}
         </div>
         <div class="form-group">
-            {{form.morning.label() }}
-            {{form.morning() }}
-        </div>
-        <div class="form-group">
-            {{form.afternoon.label() }}
-            {{form.afternoon() }}
-        </div>
-        <div class="form-group">
-            {{form.evening.label() }}
-            {{form.evening() }}
+            {{form.timing.label(class="form-control-label")}}
+            {{form.timing(class="form-control form-control-lg")}}
         </div>
         <div class="form-group">
             {{form.submit(class="btn btn-outline-info") }}
